# voxeled-engine

./: AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
benches/: channel_throughput.rs  chunk_format.rs  chunk_generation.rs  frustum_flood_fill.rs
src/: bitvec.rs  cam_controller.rs  chunk.rs  chunk_format.rs  config.rs  config_loader.rs  data_structures.rs  debug.rs  engine.rs  engine_config.rs  flood_fill.rs  frustum.rs  job.rs  lib.rs  mesh.rs  meshing.rs  mpsc.rs  mpsc_channel.rs  random.rs  sampling.rs  server.rs  spsc_channel.rs  task.rs  task_submission.rs  threadpool.rs  time.rs  voxel.rs  worker.rs  worker_pool.rs  worker_spsc.rs  world_gen.rs
src/chunk/: chunk_format.rs  mod.rs
src/console/: error.rs  mod.rs
src/deprecated/: chunk.rs  job.rs  threadpool.rs
src/error/: config.rs  mod.rs
src/netcode/: mod.rs
src/physics/: collision.rs  mod.rs  verlet.rs
src/world_gen/: generators.rs  mod.rs
