[package]
name = "voxine"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["renderer"]
renderer = []

[dependencies]
glam = "0.23"
parking_lot = "*"
tokio = "*"
crossbeam = "0.8.4"
num_cpus = "1.16"
rand = "0.8.5"
rand_distr = "0.4"
noise = "*"
bytemuck = { version = "1.16", features = ["derive"] }
wgpu = "25.0"
colored = "2.0"
rtrb = "*"
notify = "6"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
blake3 = "1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "frustum_flood_fill"
harness = false

[[bench]]
name = "channel_throughput"
harness = false

[[bench]]
name = "chunk_generation"
harness = false

[[bench]]
name = "chunk_format"
harness = false
